# rust-mongodb_compass

./: Cargo.toml
src/: main.rs
src/app/: commands.rs  state.rs
src/mongo/: aggregation.rs  change_streams.rs  client.rs  crud.rs  cursor_engine.rs  index.rs  index_management.rs  mod.rs  performance.rs  query.rs
src/security/: credentials.rs
src/utils/: export.rs  json.rs  mode.rs
