[package]
name = "novadb-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1.19"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
